@@ -250,4 +250,5 @@ REL1_10_11: (released ...)
 - InterWikiLinkManager: added cancellation of hook-chain on EditFormPreloadText
 - Massive update of almost all extension headers - normalization
 - StubManager: support for 'exclude' namespace triggering
+- CapitalLinks are 'false' by default (helps with FileManager & DirectoryManager extensions)
 - 
